@@ -24,6 +24,8 @@ LanguageTool Change Log
 -API:
 	-Some methods from org.languagetool.tools.StringTools have been moved to
 	 the org.languagetool.gui.Tools class in the languagetool-gui-commons project
+	-LanguageToolListener.languageToolEventOccured() has been renamed to
+	 LanguageToolListener.languageToolEventOccurred()
 	-org.languagetool.tools.SymbolLocator isn't public anymore (shouldn't affect anybody)
 
 -languagetool-wikipedia: the command line options for checking a Wikipedia dump
